--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,24 @@
 sudo: required
 services:
   - docker
-
+node_js:
+  - "11.10.1"
+  
 before_install:
   - docker build -t isras/docker-react  -f Dockerfile.dev .
 
 script:
   - docker run isras/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-432550225644"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
